test/runnable/numbers.nt
module numbers;

macro import std.macro.assert;

void main() {
    assert(1_234 == 1234);
    assert(0xff_ff == 0xffff);
    assert(0b10_10 == 0b1010);
}
