test/fail_compilation/private_import_test.nt
module private_import_test;

import private_import;

void main() {
    foo;
}
